[package]
name = "Shuck-n-Jive"
version = "0.1.0"
authors = ["Randy White <romxero@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml = "0.3.0"
rusqlite = "0.24.1"
uuid = "0.8.1"
json = "0.12.4"
time = "0.2.22"
regex = "1.4.1"


[[bin]]
name = "Shuck-n-Jive"
path = "main.rs"


